--- a/Frontend/src/assets/sass/lbd/_alerts.scss
+++ b/Frontend/src/assets/sass/lbd/_alerts.scss
@@ -33,6 +33,7 @@
 
     i.nc-simple-remove{
         font-size: 12px !important;
+        cursor: pointer;
         font: bold normal normal 14px/1 'nucleo-icons';
     }
 
